# processguard

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: eval-gate.yml  tests.yml
datasets/calibration/: README.md  categories.jsonl  pt_candidates_v1.jsonl  ram_candidates_v1.jsonl
datasets/gold/: README.md  v0.2.jsonl
docs/: _gen_demo_png.py  calibration.md  judge_audit.md  real_run_findings.md  v0.2_plan.md  v0.3_plan.md
examples/: crewai_demo.py  langgraph_demo.py  raw_loop_demo.py  real_langgraph_demo.py  real_run_log.jsonl  real_run_status.json  synthetic_langgraph_demo.py  synthetic_raw_loop_demo.py
experimental/: crewai_demo.py
processguard/: __init__.py  guard.py
processguard/adapters/: base.py  crewai.py  langgraph.py
processguard/core/: __init__.py  event.py  policy.py  storage.py
processguard/detectors/: __init__.py  base.py  no_progress_loop.py  premature_termination.py  reasoning_action_mismatch.py  step_repetition.py  unaware_termination.py
processguard/evaluators/: __init__.py  base.py  deterministic.py  llm_judge.py  registry.py
scripts/: run_calibration.py  run_eval.py
tests/: conftest.py  test_calibration_loader.py  test_calibration_metrics.py  test_close.py  test_eval_harness.py  test_eval_registry.py  test_evaluators.py  test_langgraph_adapter.py  test_llm_judge.py  test_no_progress_loop.py  test_policy.py  test_repeat.py  test_step_repetition.py  test_storage_threading.py  test_unaware_termination.py
(+6 files in other folders)
