[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "processguard"
version = "0.1.0"
description = "Runtime detection for multi-agent coordination failures (MAST taxonomy)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["multi-agent", "llm", "reliability", "mast", "langgraph", "crewai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0", "langchain-core>=0.3.0"]
crewai   = ["crewai>=0.80.0"]
all      = ["processguard[langgraph,crewai]"]
dev      = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage   = "https://github.com/SahitReddy2/processguard"
Repository = "https://github.com/SahitReddy2/processguard"
Issues     = "https://github.com/SahitReddy2/processguard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["processguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
